--- a/algorithms/index.ipynb
+++ b/algorithms/index.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "First we start with the oracle based algorithms (an oracle is a \"black box\" operation that is used as input to another algorithm):\n",
     "\n",
-    "- [Deutsch-Jozsa](deutsch_jozsa.ipynb) algorithm: determines whether a function is balanced or constant. The algorithm has no practical use, but it is famous for being one of the first examples of a quantum algorithm that is exponentially faster than any deterministic classical algorithm.\n",
+    "- [Deutsch-Jozsa](files/deutsch_jozsa.ipynb) algorithm: determines whether a function is balanced or constant. The algorithm has no practical use, but it is famous for being one of the first examples of a quantum algorithm that is exponentially faster than any deterministic classical algorithm.\n",
     "\n",
     "\n",
     "- [Bernstein-Vazirani](bernstein_vazirani.ipynb) algorithm: recovers the unknown parameter of a particular scalar product function. Like the Deutsch-Jozsa algorithm, it has no practical use and is one of the early examples of quantum speedup.\n",
